admin panel repaired

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -107,3 +107,9 @@ select:hover
 {
     margin: 3px;
 }
+table, th, td 
+{
+    border: 1px solid black;
+    padding: 3px;
+    border-collapse: collapse;
+}
